--- a/app/views/17-0/provider.html
+++ b/app/views/17-0/provider.html
@@ -371,15 +371,24 @@
                 <p class="govuk-body" >There are no other training providers available for this course at the apprenticeship location.</p>
 
                 <!-- <p class="govuk-body">The Education and Skills Funding Agency (ESFA) can advise you what to do next.</p> -->
-                    <p class="govuk-body">You can either:</p>
-                    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-6">
+                    <!-- <p class="govuk-body">You can either:</p> -->
+                    <!-- <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-6"> -->
                         <!-- <li><a href="https://help.apprenticeships.education.gov.uk/hc/en-gb#contact-us" class="govuk-link govuk-link--no-visited-state">contact ESFA</a></li> -->
-                        <li><a href="training" class="govuk-link govuk-link--no-visited-state">search for another course</a></li>
-                        <li><a href="https://help.apprenticeships.education.gov.uk/hc/en-gb#contact-us" class="govuk-link govuk-link--no-visited-state">get help with finding a training provider</a></li>
-                    </ul>
+                        <!-- <li><a href="training" class="govuk-link govuk-link--no-visited-state">search for another course</a></li> -->
+                        <!-- <li><a href="https://help.apprenticeships.education.gov.uk/hc/en-gb#contact-us" class="govuk-link govuk-link--no-visited-state">get help with finding a training provider</a></li> -->
+                    <!-- </ul> -->
+                    <p class="govuk-body govuk-!-margin-bottom-5">
+                    You can <a href="training" class="govuk-link govuk-link--no-visited-state">search for another course</a>.
+                </p>
                     <p class="govuk-body">{{myData.countproviders}} providers available at other locations.</p>
                     <p class="govuk-body govuk-!-margin-bottom-6"><a href="providers?standard={{myData.standard}}&location" class="govuk-button govuk-link--no-visited-state govuk-!-margin-bottom-0">View all providers for this course</a></p>
 
+                     <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
+                    Having trouble finding a training provider?
+                </h3>
+                <p>
+                    You can <a href="#">tell us about your training needs</a> and we'll share your interest with training providers.
+                </p>
 
 
                 <!-- <p class="govuk-body">There are 0 training providers for {{_standardTitle | safe}} in the apprenticeship location.</p> -->
