quick FAT journey

--- a/app/views/17-0/aed-confirmation.html
+++ b/app/views/17-0/aed-confirmation.html
@@ -32,6 +32,10 @@ html: 'This service is being used for research only.'
 		</p>
 
 		<p class="govuk-body">
+			Your information will help us to improve apprenticeship training opportunities in England. 
+		</p>
+
+		<p class="govuk-body">
 			<a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
 		</p>
 
