--- a/app/views/17-0/provider.html
+++ b/app/views/17-0/provider.html
@@ -387,7 +387,7 @@
                     Having trouble finding a training provider?
                 </h3>
                 <p>
-                    You can <a href="#">tell us about your training needs</a> and we'll share your interest with training providers.
+                    You can <a href="aed-training-needs">tell us about your training needs</a> and we'll share your interest with training providers.
                 </p>
 
 
