--- a/app/views/17-0/standard.html
+++ b/app/views/17-0/standard.html
@@ -273,7 +273,7 @@
                     Having trouble finding a training provider?
                 </h3>
                 <p>
-                    You can <a href="#">tell us about your training needs</a> and we'll share your interest with training providers.
+                    You can <a href="aed-training-needs">tell us about your training needs</a> and we'll share your interest with training providers.
                 </p>
 
                 <p class="govuk-body govuk-!-margin-top-6">
@@ -354,7 +354,7 @@
                     Having trouble finding a training provider?
                 </h3>
                 <p>
-                    You can <a href="#">tell us about your training needs</a> and we'll share your interest with training providers.
+                    You can <a href="aed-training-needs">tell us about your training needs</a> and we'll share your interest with training providers.
                 </p>
                 {% endif %}
             </div>
