--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -241,6 +241,46 @@
     <div class="govuk-grid-column-full">
 
         <h2 class="govuk-heading-m">Full page list</h2>
+
+        <table class="govuk-table">
+            <!-- <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header">Page</th>
+                <th scope="col" class="govuk-table__header">Link</th>
+                </tr>
+            </thead> -->
+            <tbody class="govuk-table__body">    
+                <!-- <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Start</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="start">/start</a></td>
+                </tr> -->
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell" colspan="2"> <h2 class="govuk-heading-m govuk-!-margin-top-4">AED</h2></th>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Course - 0 providers</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="standard?standard=36&r=t">/standard</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Course - location in session - 0 providers at location</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="standard?standard=34&location=Coventry&r=t">/standard</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Providers list - 0 for location</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="providers?location=Coventry&standard=34&r=t">/providers</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Provider - 0 at location</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="provider?provider=313&standard=34&location=Coventry&r=t">/provider</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Course - few providers</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="providers?location=Rugby%2C+Warwickshire&standard=489&r=t">/providers</a></td>
+                </tr>
+            </tbody>
+        </table>
+
         <table class="govuk-table">
             <!-- <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
