provider links and course names

--- a/app/views/17-0/aed-training-needs.html
+++ b/app/views/17-0/aed-training-needs.html
@@ -47,7 +47,7 @@ html: 'This service is being used for research only.'
 				Apprenticeship training course
 			</h3>
 			<p class="govuk-!-margin-bottom-2">
-				Able seafarer (deck) (level 2)
+				{{data['courseName']}}
 			</p>
 			<p class="govuk-!-margin-bottom-6">
 				<a href="#">Change</a>
