--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -260,23 +260,23 @@
 
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Course - 0 providers</th>
-                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="standard?standard=36&r=t">/standard</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="standard?standard=36&r=t&courseName=Public service operational delivery officer (level 3)">/standard</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Course - location in session - 0 providers at location</th>
-                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="standard?standard=34&location=Coventry&r=t">/standard</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="standard?standard=34&location=Coventry&r=t&courseName=Able seafarer (deck) (level 2)">/standard</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Providers list - 0 for location</th>
-                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="providers?location=Coventry&standard=34&r=t">/providers</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="providers?location=Coventry&standard=34&r=t&courseName=Able seafarer (deck) (level 2)">/providers</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Provider - 0 at location</th>
-                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="provider?provider=313&standard=34&location=Coventry&r=t">/provider</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="provider?provider=313&standard=34&location=Coventry&r=t&courseName=Able seafarer (deck) (level 2)">/provider</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Course - few providers</th>
-                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="providers?location=Rugby%2C+Warwickshire&standard=489&r=t">/providers</a></td>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="providers?location=Rugby%2C+Warwickshire&standard=443&r=t&courseName=Museums and galleries technician (level 3)">/providers</a></td>
                 </tr>
             </tbody>
         </table>
