--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -76,7 +76,8 @@
             href: "http://gov.uk/esfa",
             text: "Built by the Education and Skills Funding Agency"
           }
-        ]
+        ],
+        html: footerLinks
       }
     }) }}
   {% endblock %}
