dynamic course and location

--- a/app/views/17-0/aed-training-needs.html
+++ b/app/views/17-0/aed-training-needs.html
@@ -57,7 +57,7 @@ html: 'This service is being used for research only.'
 				Training location
 			</h3>
 			<p class="govuk-!-margin-bottom-2">
-				Coventry, West Midlands
+				{{data['courseLocation'] or "Coventry, West Midlands"}}
 			</p>
 			<p class="govuk-!-margin-bottom-6">
 				<a href="#">Change</a>
