--- a/app/views/17-0/standard.html
+++ b/app/views/17-0/standard.html
@@ -269,12 +269,7 @@
                 
                 <p class="govuk-body">There are no training providers available for this course.</p>
                 
-                <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-                    Having trouble finding a training provider?
-                </h3>
-                <p>
-                    You can <a href="aed-training-needs">tell us about your training needs</a> and we'll share your interest with training providers.
-                </p>
+                {% include './_aed-cta.html' %}
 
                 <p class="govuk-body govuk-!-margin-top-6">
                     You can also <a href="training" class="govuk-link govuk-link--no-visited-state">search for another course</a>.
@@ -350,12 +345,7 @@
                 {% endif %}
 
                 {% if _displaycountproviders == 0 %}
-                <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-                    Having trouble finding a training provider?
-                </h3>
-                <p>
-                    You can <a href="aed-training-needs">tell us about your training needs</a> and we'll share your interest with training providers.
-                </p>
+                {% include './_aed-cta.html' %}
                 {% endif %}
             </div>
 
