--- a/app/views/17-0/home.html
+++ b/app/views/17-0/home.html
@@ -44,6 +44,12 @@ Find apprenticeship training for your apprentice
           </a>
         </p>
 
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+        <!-- <div class="fat-panel fat-panel-blocked govuk-!-margin-bottom-5 govuk-!-margin-top-8"> -->
+            {% include './_aed-cta.html' %}
+        <!-- </div> -->
+
         <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
         <p class="govuk-body">View <a href="providers-all" class="govuk-link govuk-link--no-visited-state">training providers</a> by location of apprenticeship.</p> -->
