--- a/app/views/17-0/provider.html
+++ b/app/views/17-0/provider.html
@@ -507,6 +507,10 @@
         </div>
 
         <div class="fat-panel fat-panel-blocked govuk-!-margin-bottom-5">
+            {% include './_aed-cta.html' %}
+        </div>
+
+        <div class="fat-panel fat-panel-blocked govuk-!-margin-bottom-5">
             <p class="govuk-body shortlist-label-non-js " >
                 {% if _selectedProvider.inFavourites == true %}
                 <strong class="govuk-tag">
