--- a/app/views/17-0/providers.html
+++ b/app/views/17-0/providers.html
@@ -587,6 +587,7 @@ Training providers for - {{_standardTitle|safe}}
                 {% endfor %}
 
                 {% if myData.displaycount != 0 %}
+                <hr class="govuk-section-break govuk-section-break--m">
                 {% include './_aed-cta.html' %}
                 {% endif %}
             </div>
