--- a/app/views/aed-4-0/confirmation-page.html
+++ b/app/views/aed-4-0/confirmation-page.html
@@ -23,20 +23,20 @@ html: 'This service is being used for research only.'
 			html: data['request']['standard']['name']
 		}) }}
 
-		<p class="govuk-body">We have sent you a confirmation email.</p>
+		<p class="govuk-body">We've sent you a confirmation email.</p>
 
 		<h2 class="govuk-heading-m">What happens next</h2>
 
 		<p class="govuk-body">
-			Training providers can view your anonymised request, along with those from other employers.
+			Training providers can view details about the training you're interested in. We'll keep details about your organisation anonymous.
 		</p>
 		<p class="govuk-body">
-			You'll receive a notification email if a training provider tells us that they can deliver your training.
+			If a training provider tells us they're interested in delivering your training, we'll send you a notification email.
 		</p>
 
-		<p class="govuk-body">
+		<!-- <p class="govuk-body">
 			<a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
-		</p>
+		</p> -->
 	</div>
 </div>
 
@@ -45,6 +45,6 @@ html: 'This service is being used for research only.'
 {% set footerLinks %}
 <ul class="govuk-list govuk-!-font-size-16">
 	<li><a href="../provider-2-0/?employer-version={{data['prototypeVersion']}}">Continue to Provider journey</a></li>
-	<li><a href="../aed-3-0/email-provider-interest?employer-version={{data['prototypeVersion']}}">Continue to Employer email</a></li>
+	<li><a href="../aed-4-0/email-provider-interest?employer-version={{data['prototypeVersion']}}">Continue to Employer email</a></li>
 </ul>
 {% endset %}
