--- a/app/views/aed-4-0/contact-details.html
+++ b/app/views/aed-4-0/contact-details.html
@@ -6,7 +6,12 @@ GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
-{% include './includes/_banner--experimental.html' %}
+{{ govukPhaseBanner({
+	tag: {
+	text: "experimental"
+},
+html: 'This service is being used for research only.'
+}) }}
 
 {{ govukBackLink({
 	"text": "Back",
@@ -23,14 +28,14 @@ GOV.UK Prototype Kit
 			{% call govukFieldset({
 				legend:
 				{
-					text: "Who can we contact about this?",
+					text: "Who should we contact about this?",
 					classes: "govuk-fieldset__legend--xl",
 					isPageHeading: true
 				}
 			}) %}
 
 			<p class="govuk-!-margin-bottom-6">
-				We'll share these details with training providers who are interested in delivering this apprenticeship. 
+				We'll use these details to contact you if there are training providers interested in delivering this apprenticeship. 
 			</p>
 
 			<!-- {{ govukInput({
