--- a/app/views/aed-4-0/email-provider-interest.html
+++ b/app/views/aed-4-0/email-provider-interest.html
@@ -14,7 +14,7 @@
   </a>
 
   <h1 class="heading-large">
-    A training provider has responded to your training request
+    A training provider is interested in delivering your training
   </h1>
 
   <div class="govuk-inset-text">
@@ -47,7 +47,7 @@
       {
         key:
         {
-          text: "Start date"
+          text: "Available start date"
         },
         value:
         {
@@ -61,8 +61,10 @@
         },
         value:
         {
-          html: "<p>£4,500<br>
-             <small style='color: #777'>£225 for employers who do not pay the apprenticeship levy</small></p>"
+          html: '£225<br>
+          <small style="color:#777">If you do not pay the apprenticeship levy</small><hr class="govuk-section-break govuk-section-break--visible govuk-section-break--s govuk-!-margin-bottom-2 govuk-!-margin-top-2">
+          £4,500<br>
+          <small style="color:#777">If you pay the apprenticeship levy</small>'
         }
       }
       ]
@@ -70,19 +72,19 @@
   </div>
 
   <p>
-    You can view more information at <a href="training-proposal">https://manage-apprenticeships.service.gov.uk/training-request?id=732137abe238213f12-eaf1d1271912</a>
+    You should contact ABC Training if you're interested in their training proposal. 
   </p>
 
   <p>
-    This is an automated message. Please don't reply to this email.
+    This is an automated message. Do not reply to this email.
   </p>
 
   <p>
-    Kind regards,
+    From
   </p>
 
   <p>
-    Apprenticeship service team,<br>
+    Apprenticeship service team<br>
     Education and Skills Funding Agency
   </p>
 </main>
