--- a/app/views/aed-4-0/start-date.html
+++ b/app/views/aed-4-0/start-date.html
@@ -29,24 +29,24 @@ html: 'This service is being used for research only.'
 						<p>
 				Enter the date you want the training to start by
 			</p>
-			<div id="start-date-hint" class="govuk-hint">
+			<div id="before-month-date-hint" class="govuk-hint">
 				For example, 03 2021
 			</div>
-			<div class="govuk-date-input" id="start-date">
+			<div class="govuk-date-input" id="before-month-date">
 				<div class="govuk-date-input__item">
 					<div class="govuk-form-group">
-						<label class="govuk-label govuk-date-input__label" for="start-date-month">
+						<label class="govuk-label govuk-date-input__label" for="before-month-date-month">
 							Month
 						</label>
-						<input class="govuk-input govuk-date-input__input govuk-input--width-2" id="start-date-month" name="request[start-date-month]" type="text" pattern="[0-9]*" inputmode="numeric">
+						<input class="govuk-input govuk-date-input__input govuk-input--width-2" id="before-month-date-month" name="request[before-month-date-month]" type="text" pattern="[0-9]*" inputmode="numeric">
 					</div>
 				</div>
 				<div class="govuk-date-input__item">
 					<div class="govuk-form-group">
-						<label class="govuk-label govuk-date-input__label" for="start-date-year">
+						<label class="govuk-label govuk-date-input__label" for="before-month-date-year">
 							Year
 						</label>
-						<input class="govuk-input govuk-date-input__input govuk-input--width-4" id="start-date-year" name="request[start-date-year]" type="text" pattern="[0-9]*" inputmode="numeric">
+						<input class="govuk-input govuk-date-input__input govuk-input--width-4" id="before-month-date-year" name="request[before-month-date-year]" type="text" pattern="[0-9]*" inputmode="numeric">
 					</div>
 				</div>
 			</div>
@@ -56,24 +56,24 @@ html: 'This service is being used for research only.'
 			<p>
 				Enter the month you want the training to start
 			</p>
-			<div id="start-date-hint" class="govuk-hint">
+			<div id="specific-month-date-hint" class="govuk-hint">
 				For example, 03 2021
 			</div>
-			<div class="govuk-date-input" id="start-date">
+			<div class="govuk-date-input" id="specific-month-date">
 				<div class="govuk-date-input__item">
 					<div class="govuk-form-group">
-						<label class="govuk-label govuk-date-input__label" for="start-date-month">
+						<label class="govuk-label govuk-date-input__label" for="specific-month-date-month">
 							Month
 						</label>
-						<input class="govuk-input govuk-date-input__input govuk-input--width-2" id="start-date-month" name="request[start-date-month]" type="text" pattern="[0-9]*" inputmode="numeric">
+						<input class="govuk-input govuk-date-input__input govuk-input--width-2" id="specific-month-date-month" name="request[specific-month-date-month]" type="text" pattern="[0-9]*" inputmode="numeric">
 					</div>
 				</div>
 				<div class="govuk-date-input__item">
 					<div class="govuk-form-group">
-						<label class="govuk-label govuk-date-input__label" for="start-date-year">
+						<label class="govuk-label govuk-date-input__label" for="specific-month-date-year">
 							Year
 						</label>
-						<input class="govuk-input govuk-date-input__input govuk-input--width-4" id="start-date-year" name="request[start-date-year]" type="text" pattern="[0-9]*" inputmode="numeric">
+						<input class="govuk-input govuk-date-input__input govuk-input--width-4" id="specific-month-date-year" name="request[specific-month-date-year]" type="text" pattern="[0-9]*" inputmode="numeric">
 					</div>
 				</div>
 			</div>
