--- a/app/views/aed-4-0/contacted-provider-error.html
+++ b/app/views/aed-4-0/contacted-provider-error.html
@@ -36,7 +36,7 @@ html: 'This service is being used for research only.'
 			<p>
 				{{govukButton({
 					text: "Find a training provider",
-					href: "",
+					href: "../" + data['fat-version'] + "/home",
 					classes: "govuk-!-margin-top-4"
 				})}}
 			</p>
