--- a/app/views/aed-4-0/start.html
+++ b/app/views/aed-4-0/start.html
@@ -47,7 +47,7 @@ html: 'This service is being used for research only.'
 			You should know which apprenticeship training course you want your apprentice to do.
 		</p> -->
 		<p>
-			You should use the '<a href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/">Find apprenticeship training for your apprentice</a>' service to:
+			You should use the '<a href="../{{data['fat-version']}}/home">Find apprenticeship training for your apprentice</a>' service to:
 		</p>
 
 		<ul class="govuk-list govuk-list--bullet">
