--- a/app/views/aed-provider-2-0/check-your-answers.html
+++ b/app/views/aed-provider-2-0/check-your-answers.html
@@ -38,7 +38,7 @@ html: 'This service is being used for research only.'
 				},
 				value:
 				{
-					text: "Business admin, Level: 2"
+					text: data['request']['standard']['name']
 				}
 			},
 			{
@@ -89,26 +89,6 @@ html: 'This service is being used for research only.'
 				value:
 				{
 					text: "£4,500"
-				},
-				actions:
-				{
-					items: [
-					{
-						href: "cohort-requirements",
-						text: "Change",
-						visuallyHiddenText: "name"
-					}
-					]
-				}
-			},
-			{
-				key:
-				{
-					text: "Total apprentices required"
-				},
-				value:
-				{
-					text: "18"
 				},
 				actions:
 				{
