--- a/app/views/aed-provider-2-0/cohort-requirements.html
+++ b/app/views/aed-provider-2-0/cohort-requirements.html
@@ -118,7 +118,7 @@ html: 'This service is being used for research only.'
 			spellcheck: false
 		}) }}
 
-		{{ govukInput({
+		<!-- {{ govukInput({
 			label:
 			{
 				text: "Total apprentices required",
@@ -135,7 +135,7 @@ html: 'This service is being used for research only.'
 			pattern: "[0-9]*",
 			spellcheck: false,
 			classes: "govuk-input--width-10"
-		}) }}
+		}) }} -->
 
 		<form method="post">
 			<p>
