--- a/app/views/aed-provider-2-0/cohorts-list.html
+++ b/app/views/aed-provider-2-0/cohorts-list.html
@@ -166,7 +166,7 @@ GOV.UK Prototype Kit
 				<li class="aed-search-results__list-item">
 					<h2 class="govuk-heading-m aed-search-results__heading">
 						<a class="aed-search-results__link" id="provider-10065593" href="cohort-details">
-							Business admin (level 2) 
+							{{data['request']['standard']['name']}}
 						</a>
 					</h2>
 					
@@ -186,7 +186,7 @@ GOV.UK Prototype Kit
 				<li class="aed-search-results__list-item">
 					<h2 class="govuk-heading-m aed-search-results__heading">
 						<a class="aed-search-results__link" id="provider-10065593" href="cohort-details">
-							Business admin (level 2) 
+							{{data['request']['standard']['name']}} 
 						</a>
 					</h2>
 					
