--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -2,13 +2,13 @@
 <script src="/public/javascripts/jquery-1.11.3.js"></script>
 
 <!-- For sortable items -->
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
+<!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
+<!-- <script>
   $( function() {
     $( "#sortable" ).sortable();
     $( "#sortable" ).disableSelection();
   } );
-</script>
+</script> -->
 
 {% for scriptUrl in extensionConfig.scripts %}
   <script src="{{scriptUrl}}"></script>
