--- a/app/views/17-0/home.html
+++ b/app/views/17-0/home.html
@@ -44,10 +44,10 @@ Find apprenticeship training for your apprentice
           </a>
         </p>
 
-        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"> -->
 
         <!-- <div class="fat-panel fat-panel-blocked govuk-!-margin-bottom-5 govuk-!-margin-top-8"> -->
-            {% include './_aed-cta.html' %}
+            <!-- {% include './_aed-cta.html' %} -->
         <!-- </div> -->
 
         <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
