--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -218,8 +218,9 @@
         		AED journey
         	</label>
         	<select class="govuk-select" style="min-width: 100%" id="aedjourney" name="aed-journey" data-option="aed-journey">
-        		<option value="single-page-form">Single page form</option>
-        		<option value="one-thing-per-page">One thing per page</option>
+        		<option value="aed-4-1">Single page form (4-1)</option>
+        		<option value="aed-4-0">One thing per page (4-0)</option>
+                <option value="aed-4-2">One thing per page (4-2)</option>
         	</select>
         </div>
     </div>
