--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -221,6 +221,7 @@
         		<option value="aed-4-1">Single page form (4-1)</option>
         		<option value="aed-4-0">One thing per page (4-0)</option>
                 <option value="aed-4-2">One thing per page (4-2)</option>
+                <option value="aed-4-3">Single page form (4-3)</option>
         	</select>
         </div>
     </div>
