--- a/app/views/aed-4-3/register-confirm.html
+++ b/app/views/aed-4-3/register-confirm.html
@@ -36,7 +36,7 @@ Manage apprenticeships
 		<p>
 			{{govukButton({
 				text: "Continue",
-				href: "standard-details",
+				href: "aed-confirmation",
 				classes: "govuk-!-margin-top-5"
 			})}}
 		</p>
