--- a/app/views/aed-4-3/start.html
+++ b/app/views/aed-4-3/start.html
@@ -70,7 +70,7 @@ html: 'This service is being used for research only.'
 		<p>
 			{{govukButton({
 				text: "Start now",
-				href: "register",
+				href: "aed-training-needs",
 				isStartButton: true,
 				classes: "govuk-!-margin-top-5"
 			})}}
