--- a/app/views/17-0/_aed-cta.html
+++ b/app/views/17-0/_aed-cta.html
@@ -1,16 +1,22 @@
 {% set aedUrl %}
-{% if data['aed-journey'] == 'aed-4-0' %}
-../aed-4-0/
-{% elif data['aed-journey'] == 'aed-4-1' %}
-../aed-4-1/
-{% elif data['aed-journey'] == 'aed-4-2' %}
-../aed-4-2/
-{% endif %}
+../{{ data['aed-journey'] }}/
 {% endset %}
 
+
+{% if data['aed-journey'] == 'aed-4-0' %}
 <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
 	Having trouble finding a training provider?
 </h3>
 <p class="govuk-!-margin-bottom-6">
 	You can <a href="{{aedUrl}}?courseName={{_standardTitle|safe}}&courseLocation={{myData.location}}&aedUrlString=[{{_fullURL|urlencode}}]&fat-version={{myData.version}}">tell us about your training needs</a> and we'll share your interest with training providers.
 </p>
+
+{% else %}
+
+<h3 class="govuk-heading-m govuk-!-margin-bottom-2">
+	I cannot find the training I need
+</h3>
+<p class="govuk-!-margin-bottom-6">
+	If you’re not able to find the training you need, <a href="{{aedUrl}}?courseName={{_standardTitle|safe}}&courseLocation={{myData.location}}&aedUrlString=[{{_fullURL|urlencode}}]&fat-version={{myData.version}}">tell us what you’re looking for</a>. We’ll share the details with relevant training providers to check if they can deliver the training.
+</p>
+{% endif %}
