--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -512,7 +512,7 @@
         //SET VALUES
         function setValues(){
             //Base URL
-            var _urlBase = "https://das-fat-prototype.herokuapp.com/" + {{myData.version|dump|safe}} + "/";
+            var _urlBase = "https://das-fat-aed.herokuapp.com/" + {{myData.version|dump|safe}} + "/";
             //Queries
             var _urlComponents = "",
             _urlReset = "r=t",
